--- a/css/tw-output.css
+++ b/css/tw-output.css
@@ -1626,6 +1626,14 @@ button:hover,
   justify-content: space-between;
 }
 
+.justify-around {
+  justify-content: space-around;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
 .justify-items-center {
   justify-items: center;
 }
