add ?noresize image param

--- a/templates/home.html
+++ b/templates/home.html
@@ -270,7 +270,7 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Usluge/bwt_m11.jpg",
+          "src": "https://atsistem.rs/hubfs/Sadrzaj%20Usluge/bwt_m11.jpg?noresize",
           "alt": "BWT Pool Products",
           "size_type": "auto",
           "width": 760,
@@ -303,7 +303,7 @@
           "no_follow": false
         },
         'image_field': {
-          "src": "https://atsistem.rs/hs-fs/hubfs/Sadrzaj%20Usluge/Pokrivac%20za%20bazen.jpeg",
+          "src": "https://atsistem.rs/hs-fs/hubfs/Sadrzaj%20Usluge/Pokrivac%20za%20bazen.jpeg?noresize",
           "alt": "Pokrivac za bazen",
           "size_type": "auto",
           "width": 760,
