--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -39,6 +39,7 @@
           path='../../modules/menu',
           label='Primary navigation'
         %}
+        </div>
       </div>
 
      {#<div class="header__language-switcher header--element">
