--- a/templates/contact.html
+++ b/templates/contact.html
@@ -14,10 +14,77 @@
 	  label='Main section',
 	  class='body-container body-container--home'
 	%}
-
-  {% include_dnd_partial 
-    path='../sections/contact.html'
+  
+  {% dnd_section
+    padding={
+      'top': 160,
+      'bottom': 100,
+      'left': 40,
+      'right': 40
+    },
+    background_image = {
+      "backgroundPosition": "BOTTOM_RIGHT",
+      "backgroundSize": "cover",
+      "imageUrl": get_asset_url('../images/blur-object-bg.jpg')
+    }
   %}
+    {% dnd_column 
+      offset=0, 
+      width=6,
+      padding={
+        'default':{
+          'bottom': 0,
+        },
+        'mobile':{
+          'bottom': 40
+        }
+      }
+    %}
+      {% dnd_row %}
+        {% dnd_module 
+          path='@hubspot/rich_text',
+          html='<h1 class="font-bold">Pošaljite upit</h1>'
+        %}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+      {% dnd_row %}
+        {% dnd_module 
+          path='../modules/contact-form'
+        %}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+    {% end_dnd_column %}
+    {% dnd_column offset=6, width=6 %}
+      {% dnd_row %}
+        {% dnd_module 
+          path='@hubspot/rich_text',
+          html='
+            <div class="flex flex-col gap-0.5 mb-2">
+              <h2>Osnovne informacije:</h2>
+              <p><strong>Naziv: </strong>A&T SISTEM d.o.o</p>
+              <p><strong>PIB: </strong>106028949</p>
+              <p><strong>MB: </strong>20519223</p>
+              <p><strong>Adresa: </strong>Bulevar Arsenija Čarnojevića 103, Beograd 11070, Serbia</p>
+              <p><strong>Email: </strong>office@atsistem.co.rs</p>
+              <p><strong>Tel: </strong><a href="tel:+381112141622">+381112141622</a></p>
+              <p><strong>Mob: </strong><a href="tel:+381646142992">+381646142992</a></p>
+            </div>
+          '
+        %}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+      {% dnd_row %}
+        {% dnd_module 
+          path='@hubspot/rich_text',
+          html='
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.348924444825!2d20.412169915911843!3d44.81445578458143!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a65853afe5581%3A0x870ad688246fc145!2sA%26T%20SISTEM%20d.o.o.!5e0!3m2!1sen!2srs!4v1671988148892!5m2!1sen!2srs" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          '
+        %}
+        {% end_dnd_module %}
+      {% end_dnd_row %}
+    {% end_dnd_column %}
+
+  {% end_dnd_section %}
 
 	{% end_dnd_area %}
 {% endblock body %}
